# A2UI

./: .gitignore  .prettierignore  .yarnrc.yml  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  eslint.preset.mjs  hooks.py  improvements.md  mkdocs.yaml  package.json
.gemini/: GEMINI.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: check_license.yml  check_private_index.yml  composer_build_and_test.yml  docs.yml  e2e_test.yaml  editor_build.yml  enforce-formatting.yml  flutter_packages_test.yaml  inspector_build.yml  lit_build_and_test.yml  lit_samples_build.yml  ng_build_and_test.yml  presubmit-lint.yml  python_agent_sdk_build_and_test.yml  python_ci.yml  python_samples_build.yml  react_renderer.yml  run_evals.yml  validate_specifications.yml  web_build_and_test.yml  web_ci.yml
.yarn/releases/: yarn-4.13.0.cjs
agent_sdks/: agent_development.md
agent_sdks/cpp/: CMakeLists.txt
agent_sdks/kotlin/: build.gradle.kts
docs/: agents.md  catalogs.md  glossary.md  index.md  quickstart.md  renderers.md  roadmap.md
docs/concepts/: actions.md  catalogs.md  components.md  data-binding.md  data-flow.md  glossary.md  overview.md
docs/ecosystem/: a2ui-in-the-world.md  renderers.md
docs/guides/: a2ui-in-mcp-apps.md  a2ui_over_mcp.md  agent-development.md  (+5 more)
eval/: tasks.py
renderers/: design.md  package-lock.json
samples/: README.md
samples/mcp/flight_booking/: README.md  __main__.py  adk_server.py  agent.py  backend.py  pyproject.toml
samples/mcp/flight_booking/tests/: test_integration.py
scripts/: fix_format.sh
tmp/: evaluation_v0_10_features.md
(+1136 files in other folders)
